--- a/International Chess/.project
+++ b/International Chess/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Projecttest</name>
+	<name>International Chess</name>
 	<comment></comment>
 	<projects>
 	</projects>
